--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -13,12 +13,12 @@ ignored = [
   go-tests = true
 
 [[constraint]]
-  name = "github.com/jmoiron/sqlx"
-  revision = "2aeb6a910c2b94f2d5eb53d9895d80e27264ec41"
+  name = "github.com/ulule/sqlx"
+  revision = "c5252437a47be63a059eccced7436bc68e0e4a53"
 
 [[constraint]]
-  name = "github.com/heetch/sqalx"
-  revision = "e40536072f95235446bdd63325902f82373774cc"
+  name = "github.com/ulule/sqalx"
+  revision = "d9cae201d6f9efafb7c8b76038c077c5d203f161"
 
 [[constraint]]
   name = "github.com/lib/pq"
@@ -38,4 +38,4 @@ ignored = [
 
 [[constraint]]
   name = "github.com/oklog/ulid"
-  revision = "7e1bd8a9a281b5abdf651a430b918bb0ecdbceda"
+  revision = "3928b679b154aad7ea1db5352e4277e4e448b324"
