--- a/scripts/conf/go/Dockerfile
+++ b/scripts/conf/go/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:1.12.9-buster
+FROM golang:1.13-buster
 
 MAINTAINER thomas@leroux.io
 
@@ -9,14 +9,20 @@ ENV LC_ALL C.UTF-8
 RUN apt-get -y update \
     && apt-get upgrade -y \
     && apt-get -y install git \
-    && go get -u -v github.com/stretchr/testify/require \
-    && go get -u -v github.com/davecgh/go-spew/spew \
-    && go get -u -v github.com/golangci/golangci-lint/cmd/golangci-lint \
     && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
+    && rm -rf /var/lib/apt/lists/* \
+    && useradd -ms /bin/bash gopher
 
-COPY . /media/ulule/makroud
+COPY go.mod go.sum /media/ulule/makroud/
+RUN chown -R gopher:gopher /media/ulule/makroud
+ENV GOPATH /home/gopher/go
+ENV PATH $GOPATH/bin:$PATH
+USER gopher
+
+RUN go get -u github.com/golangci/golangci-lint/cmd/golangci-lint
+
 WORKDIR /media/ulule/makroud
 RUN go mod download
+COPY --chown=gopher:gopher . /media/ulule/makroud
 
-CMD /bin/bash
+CMD [ "/bin/bash" ]
